RP-72 Font and Spacing corrected for standard resolutions

--- a/src/app/components/snomed-footer/snomed-footer.component.scss
+++ b/src/app/components/snomed-footer/snomed-footer.component.scss
@@ -13,7 +13,7 @@ footer.footer {
     a {
         color: $alto-white;
         font-weight: 300;
-        font-size: 0.75rem;
+        font-size: 1.2rem;
 
         &:hover {
             color: $pacific-blue;
