--- a/src/app/components/snomed-typeahead/snomed-typeahead.component.scss
+++ b/src/app/components/snomed-typeahead/snomed-typeahead.component.scss
@@ -5,7 +5,7 @@ div.typeahead-box {
     //border: 1px solid $alto-white;
 
     div.typeahead {
-        font-size: 0.8rem;
+        font-size: 1.4rem;
         cursor: pointer;
 
         &:hover {
