--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,14 @@
 @import 'src/variables.scss';
 
 html {
-    font-size: 12px;
+    font-size: 62.5%;
     position: relative;
     min-height: 100%;
 }
 
-body {
+body#main-body {
     font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
+    font-size: 1.6rem;
     font-weight: 300;
     letter-spacing: 0.5px;
 }
@@ -42,7 +43,7 @@ button {
 }
 
 .mat-tooltip {
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-weight: 300;
     color: $gallery-white !important;
     max-width: 30rem !important;
